--- a/index.html
+++ b/index.html
@@ -6,8 +6,93 @@
     <title>Polityka Prywatności</title>
 </head>
 <body>
-    <h1>Polityka Prywatności</h1>
-    <p>Nasza gra nie zbiera żadnych danych osobowych użytkownika, nie wyświetla reklam i jest zgodna z zasadami Google Play.</p>
-    <p>W przypadku pytań prosimy o kontakt: terazon.pro@gmail.com</p>
+    <h1>Polityka prywatności – COMBAT WHEELS</h1>
+    <p>
+1. Informacje ogólne
+
+Niniejsza Polityka Prywatności opisuje zasady dotyczące ochrony prywatności użytkowników aplikacji mobilnej COMBAT WHEELS, dostępnej w sklepie Google Play.
+
+Dbamy o prywatność użytkowników i zapewniamy, że aplikacja została zaprojektowana w sposób, który nie narusza danych osobowych.
+
+2. Brak zbierania danych
+
+Aplikacja COMBAT WHEELS:
+
+nie zbiera żadnych danych użytkownika,
+
+nie przechowuje danych,
+
+nie przetwarza danych,
+
+nie udostępnia danych osobom trzecim.
+
+Aplikacja nie wymaga zakładania konta ani logowania.
+
+3. Dane osobowe
+
+Aplikacja COMBAT WHEELS nie zbiera żadnych danych osobowych ani informacji umożliwiających identyfikację użytkownika, w tym:
+
+imienia i nazwiska,
+
+adresu e-mail,
+
+numeru telefonu,
+
+adresu IP,
+
+danych lokalizacyjnych,
+
+identyfikatorów urządzenia,
+
+informacji o aktywności użytkownika.
+
+4. Uprawnienia i dostęp do urządzenia
+
+Aplikacja nie uzyskuje dostępu do:
+
+kontaktów,
+
+zdjęć i multimediów,
+
+mikrofonu,
+
+kamery,
+
+plików,
+
+lokalizacji,
+
+danych systemowych.
+
+Gra działa w całości lokalnie na urządzeniu użytkownika.
+
+5. Usługi i biblioteki stron trzecich
+
+Aplikacja nie korzysta z żadnych zewnętrznych usług ani bibliotek, które zbierałyby dane, w tym:
+
+systemów reklamowych,
+
+narzędzi analitycznych (np. Google Analytics, Firebase),
+
+usług śledzących.
+
+6. Bezpieczeństwo danych
+
+Ponieważ aplikacja nie zbiera ani nie przetwarza żadnych danych, nie występuje ryzyko ich utraty, kradzieży lub nieautoryzowanego dostępu.
+
+7. Prywatność dzieci
+
+Gra COMBAT WHEELS jest bezpieczna dla dzieci. Nie są zbierane żadne dane osobowe, co jest zgodne z wymogami Google Play oraz przepisami dotyczącymi ochrony prywatności dzieci (w tym COPPA).
+
+8. Zmiany w polityce prywatności
+
+W przypadku wprowadzenia zmian w funkcjonalności aplikacji, które mogłyby mieć wpływ na prywatność użytkowników, niniejsza Polityka Prywatności zostanie odpowiednio zaktualizowana.
+
+9. Kontakt
+
+W przypadku pytań dotyczących niniejszej Polityki Prywatności prosimy o kontakt:
+
+E-mail:terazon.pro@gmail.com</p>
+    <p></p>
 </body>
 </html>
