Revise privacy policy and improve styling
Updated the privacy policy title and added a description meta tag. Enhanced the styling for better readability and structured the content for clarity.

--- a/index.html
+++ b/index.html
@@ -1,98 +1,155 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polityka Prywatności</title>
+    <title>Polityka prywatności – COMBAT WHEELS</title>
+    <meta name="description" content="Polityka prywatności gry COMBAT WHEELS dostępnej w Google Play. Aplikacja nie zbiera żadnych danych użytkownika.">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            background: #ffffff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        h2 {
+            margin-top: 30px;
+            color: #222;
+        }
+        p, ul {
+            margin-top: 10px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
+
+<div class="container">
     <h1>Polityka prywatności – COMBAT WHEELS</h1>
+
+    <h2>1. Informacje ogólne</h2>
     <p>
-1. Informacje ogólne
+        Niniejsza Polityka Prywatności opisuje zasady dotyczące ochrony prywatności
+        użytkowników aplikacji mobilnej <strong>COMBAT WHEELS</strong>, dostępnej
+        w sklepie Google Play.
+    </p>
+    <p>
+        Dbamy o prywatność użytkowników i zapewniamy, że aplikacja została
+        zaprojektowana w sposób, który nie narusza danych osobowych.
+    </p>
 
-Niniejsza Polityka Prywatności opisuje zasady dotyczące ochrony prywatności użytkowników aplikacji mobilnej COMBAT WHEELS, dostępnej w sklepie Google Play.
+    <h2>2. Brak zbierania danych</h2>
+    <p>Aplikacja <strong>COMBAT WHEELS</strong>:</p>
+    <ul>
+        <li>nie zbiera żadnych danych użytkownika,</li>
+        <li>nie przechowuje danych,</li>
+        <li>nie przetwarza danych,</li>
+        <li>nie udostępnia danych osobom trzecim.</li>
+    </ul>
+    <p>Aplikacja nie wymaga zakładania konta ani logowania.</p>
 
-Dbamy o prywatność użytkowników i zapewniamy, że aplikacja została zaprojektowana w sposób, który nie narusza danych osobowych.
+    <h2>3. Dane osobowe</h2>
+    <p>
+        Aplikacja <strong>COMBAT WHEELS</strong> nie zbiera żadnych danych osobowych
+        ani informacji umożliwiających identyfikację użytkownika, w tym:
+    </p>
+    <ul>
+        <li>imienia i nazwiska,</li>
+        <li>adresu e-mail,</li>
+        <li>numeru telefonu,</li>
+        <li>adresu IP,</li>
+        <li>danych lokalizacyjnych,</li>
+        <li>identyfikatorów urządzenia,</li>
+        <li>informacji o aktywności użytkownika.</li>
+    </ul>
 
-2. Brak zbierania danych
+    <h2>4. Uprawnienia i dostęp do urządzenia</h2>
+    <p>Aplikacja nie uzyskuje dostępu do:</p>
+    <ul>
+        <li>kontaktów,</li>
+        <li>zdjęć i multimediów,</li>
+        <li>mikrofonu,</li>
+        <li>kamery,</li>
+        <li>plików,</li>
+        <li>lokalizacji,</li>
+        <li>danych systemowych.</li>
+    </ul>
+    <p>Gra działa w całości lokalnie na urządzeniu użytkownika.</p>
 
-Aplikacja COMBAT WHEELS:
+    <h2>5. Usługi i biblioteki stron trzecich</h2>
+    <p>
+        Aplikacja nie korzysta z żadnych zewnętrznych usług ani bibliotek, które
+        zbierałyby dane, w tym:
+    </p>
+    <ul>
+        <li>systemów reklamowych,</li>
+        <li>narzędzi analitycznych (np. Google Analytics, Firebase),</li>
+        <li>usług śledzących.</li>
+    </ul>
 
-nie zbiera żadnych danych użytkownika,
+    <h2>6. Bezpieczeństwo danych</h2>
+    <p>
+        Ponieważ aplikacja nie zbiera ani nie przetwarza żadnych danych, nie
+        występuje ryzyko ich utraty, kradzieży lub nieautoryzowanego dostępu.
+    </p>
 
-nie przechowuje danych,
+    <h2>7. Prywatność dzieci</h2>
+    <p>
+        Gra <strong>COMBAT WHEELS</strong> jest bezpieczna dla dzieci.
+        Nie są zbierane żadne dane osobowe, co jest zgodne z wymogami Google Play
+        oraz przepisami dotyczącymi ochrony prywatności dzieci (w tym COPPA).
+    </p>
 
-nie przetwarza danych,
+    <h2>8. Zmiany w polityce prywatności</h2>
+    <p>
+        W przypadku wprowadzenia zmian w funkcjonalności aplikacji, które mogłyby
+        mieć wpływ na prywatność użytkowników, niniejsza Polityka Prywatności
+        zostanie odpowiednio zaktualizowana.
+    </p>
 
-nie udostępnia danych osobom trzecim.
+    <h2>9. Kontakt</h2>
+    <p>
+        W przypadku pytań dotyczących niniejszej Polityki Prywatności prosimy o kontakt:
+    </p>
+    <p>
+        <strong>E-mail:</strong>
+        <a href="mailto:terazon.pro@gmail.com">terazon.pro@gmail.com</a>
+    </p>
 
-Aplikacja nie wymaga zakładania konta ani logowania.
+    <footer>
+        © 2026 COMBAT WHEELS
+    </footer>
+</div>
 
-3. Dane osobowe
-
-Aplikacja COMBAT WHEELS nie zbiera żadnych danych osobowych ani informacji umożliwiających identyfikację użytkownika, w tym:
-
-imienia i nazwiska,
-
-adresu e-mail,
-
-numeru telefonu,
-
-adresu IP,
-
-danych lokalizacyjnych,
-
-identyfikatorów urządzenia,
-
-informacji o aktywności użytkownika.
-
-4. Uprawnienia i dostęp do urządzenia
-
-Aplikacja nie uzyskuje dostępu do:
-
-kontaktów,
-
-zdjęć i multimediów,
-
-mikrofonu,
-
-kamery,
-
-plików,
-
-lokalizacji,
-
-danych systemowych.
-
-Gra działa w całości lokalnie na urządzeniu użytkownika.
-
-5. Usługi i biblioteki stron trzecich
-
-Aplikacja nie korzysta z żadnych zewnętrznych usług ani bibliotek, które zbierałyby dane, w tym:
-
-systemów reklamowych,
-
-narzędzi analitycznych (np. Google Analytics, Firebase),
-
-usług śledzących.
-
-6. Bezpieczeństwo danych
-
-Ponieważ aplikacja nie zbiera ani nie przetwarza żadnych danych, nie występuje ryzyko ich utraty, kradzieży lub nieautoryzowanego dostępu.
-
-7. Prywatność dzieci
-
-Gra COMBAT WHEELS jest bezpieczna dla dzieci. Nie są zbierane żadne dane osobowe, co jest zgodne z wymogami Google Play oraz przepisami dotyczącymi ochrony prywatności dzieci (w tym COPPA).
-
-8. Zmiany w polityce prywatności
-
-W przypadku wprowadzenia zmian w funkcjonalności aplikacji, które mogłyby mieć wpływ na prywatność użytkowników, niniejsza Polityka Prywatności zostanie odpowiednio zaktualizowana.
-
-9. Kontakt
-
-W przypadku pytań dotyczących niniejszej Polityki Prywatności prosimy o kontakt:
-
-E-mail:terazon.pro@gmail.com</p>
-    <p></p>
 </body>
 </html>
