Add developer contact information to privacy policy

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
         W przypadku pytań dotyczących niniejszej Polityki Prywatności prosimy o kontakt:
     </p>
     <p>
+        Deweloper: Terazon
+    </p>
+    <p>
         <strong>E-mail:</strong>
         <a href="mailto:terazon.pro@gmail.com">terazon.pro@gmail.com</a>
     </p>
